turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: value Blanc is not a member of object java.awt.Color
	if(getCouleurSol() == Color.Blanc)
                                    ^LangtonsAnt:5: error: value NOIR is not a member of object java.awt.Color
		setCouleurBrosse(Color.NOIR);
                                       ^LangtonsAnt:13: error: value BLANC is not a member of object java.awt.Color
		setCouleurBrosse(Color.BLANC);
                                       ^