turmites.lessons.turmites.langton.Langton.scala.code
def step() {

	if(getCouleurSol() == Color.Blanc)
	{
		setCouleurBrosse(Color.NOIR);
		baisseBrosse();
		leveBrosse();
		droite();
		avance();
	}
	else
	{
		setCouleurBrosse(Color.BLANC);
		baisseBrosse();
		leveBrosse();
		gauche();
		avance();
	}

}
